added git page link

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<section id="portfolio">
 				<div class="full-width" id="portfolio-full">
 					<div id="portfolio-image">
-						<img src="img/portfolio-heading-bouquet.png" alt="Portfolio heading bouquet" />
+						<a href="https://evemariez.github.io/jubilee-austen/"><img src="img/portfolio-heading-bouquet.png" alt="Portfolio heading bouquet" /></a>
 					</div>
 					<div class="half-width" id="jubilee-section">
 						<img src="img/jubilee-austen-site.png" alt="Jubilee Austen Developer Homepage" id="jubliee-image" />
