--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 			<section id="portfolio">
 				<div class="full-width" id="portfolio-full">
 					<div id="portfolio-image">
-						<a href="https://evemariez.github.io/jubilee-austen/"><img src="img/portfolio-heading-bouquet.png" alt="Portfolio heading bouquet" /></a>
+						<img src="img/portfolio-heading-bouquet.png" alt="Portfolio heading bouquet" />
 					</div>
 					<div class="half-width" id="jubilee-section">
-						<img src="img/jubilee-austen-site.png" alt="Jubilee Austen Developer Homepage" id="jubliee-image" />
+						<a href="https://evemariez.github.io/jubilee-austen"><img src="img/jubilee-austen-site.png" alt="Jubilee Austen Developer Homepage" id="jubliee-image" /></a>
 					</div>
 					<div class="half-width" id="rogue-section">
 						<img src="img/rogue-pickings-site.png" alt="Rogue Pickings Restaurant Homepage" id="rogue-image" />
