--- a/index.html
+++ b/index.html
@@ -91,15 +91,17 @@
 			</section>
 
 			<footer>
-				<ul>
-					<li><p id="copyright">© 2018 Eve Zaunbrecher</p></li>
-					<li class="icons"><a href="http://instagram.com/evelovesthings"><img src="img/instagram.png" alt="Instagram icon" /></a></li>
-					<li class="icons"><a href="http://www.twitter.com/evezaunbrecher"><img src="img/twitter.png" alt="Twitter icon" /></a></li>
-					<li class="icons"><a href="http://pinterest.com/evelovesthings"><img src="img/pinterest.png" alt="Pinterest Icon" /></a></li>
-					<li class="icons"><a href="https://www.dribbble.com/evezaunbrecher/"><img src="img/dribbble.png" alt="Dribbble icon" /></a></li>
-					<li class="icons"><a href="https://www.linkedin.com/in/eve-zaunbrecher-63952848/"><img src="img/linkedin.png" alt="LinkedIn icon" /></a></li>
-					<li ><p id="icons-credit">Icons by <a href="https://www.flaticon.com/authors/simpleicon">simpleicon</a></p></li>
-				</ul>
+				<div class="footer">
+					<p id="copyright">© 2018 Eve Zaunbrecher</p>
+					<ul>
+						<li class="icons"><a href="http://instagram.com/evelovesthings"><img src="img/instagram.png" alt="Instagram icon" /></a></li>
+						<li class="icons"><a href="http://www.twitter.com/evezaunbrecher"><img src="img/twitter.png" alt="Twitter icon" /></a></li>
+						<li class="icons"><a href="http://pinterest.com/evelovesthings"><img src="img/pinterest.png" alt="Pinterest Icon" /></a></li>
+						<li class="icons"><a href="https://www.dribbble.com/evezaunbrecher/"><img src="img/dribbble.png" alt="Dribbble icon" /></a></li>
+						<li class="icons"><a href="https://www.linkedin.com/in/eve-zaunbrecher-63952848/"><img src="img/linkedin.png" alt="LinkedIn icon" /></a></li>
+					</ul>
+					<p id="icons-credit">Icons by <a href="https://www.flaticon.com/authors/simpleicon">simpleicon</a></p></p>
+				</div>
 			</footer>
     	</main>
     </body>
