moved footer out of main

--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 					</div>
 				</div>	
 			</section>
-
-			<footer>
-				<div class="footer">
+    	</main>
+    	<footer>
+				<div class="full-width">
 					<p id="copyright">© 2018 Eve Zaunbrecher</p>
 					<ul>
 						<li class="icons"><a href="http://instagram.com/evelovesthings"><img src="img/instagram.png" alt="Instagram icon" /></a></li>
@@ -103,6 +103,5 @@
 					<p id="icons-credit">Icons by <a href="https://www.flaticon.com/authors/simpleicon">simpleicon</a></p></p>
 				</div>
 			</footer>
-    	</main>
     </body>
 </html>
