--- a/footer-code.html
+++ b/footer-code.html
@@ -60,7 +60,7 @@
 						<img src="img/portfolio-heading-bouquet.png" alt="Portfolio heading bouquet" />
 					</div>
 					<div class="half-width" id="jubilee-section">
-						<a href="https://evemariez.github.io/jubilee-austen"><img src="img/jubilee-austen-site.png" alt="Jubilee Austen Developer Homepage" id="jubliee-image" /></a>
+						<img src="img/jubilee-austen-site.png" alt="Jubilee Austen Developer Homepage" id="jubliee-image" />
 					</div>
 					<div class="half-width" id="rogue-section">
 						<img src="img/rogue-pickings-site.png" alt="Rogue Pickings Restaurant Homepage" id="rogue-image" />
@@ -78,8 +78,8 @@
 					<div class="third-width">
 						<div id="contact-center">
 							<h1>Let's work together!</h1>
-							<a href="mailto:hello@evezaunbrecher.com" target="_top"><img src="img/envelope.png" alt="Email envelope" id="contact-envelope"/></a>
-							<a href="mailto:hello@evezaunbrecher.com" target="_top">hello@evezaunbrecher.com</a>
+							<a href="mailto:hello@evelovestocode.com" target="_top"><img src="img/envelope.png" alt="Email envelope" id="contact-envelope"/></a>
+							<a href="mailto:hello@evelovestocode.com" target="_top">hello@evelovestocode.com</a>
 						</div>
 					</div>
 					<div class="third-width">
@@ -89,6 +89,18 @@
 					</div>
 				</div>	
 			</section>
-    	</main>
+		</main>
+<!--
+		<footer>
+			<ul>
+				<li><p id="copyright">© 2018 Eve Zaunbrecher</p></li>
+				<li class="icons"><a href="http://instagram.com/evelovesthings"><img src="img/instagram.png" alt="Instagram icon" /></a></li>
+				<li class="icons"><a href="http://www.twitter.com/evezaunbrecher"><img src="img/twitter.png" alt="Twitter icon" /></a></li>
+				<li class="icons"><a href="http://pinterest.com/evelovesthings"><img src="img/pinterest.png" alt="Pinterest Icon" /></a></li>
+				<li class="icons"><a href="https://www.dribbble.com/evezaunbrecher/"><img src="img/dribbble.png" alt="Dribbble icon" /></a></li>
+				<li class="icons"><a href="https://www.linkedin.com/in/eve-zaunbrecher-63952848/"><img src="img/linkedin.png" alt="LinkedIn icon" /></a></li>
+				<li ><p id="icons-credit">Icons by <a href="https://www.flaticon.com/authors/simpleicon">simpleicon</a></p></li>
+			</ul>
+		</footer>-->
     </body>
 </html>
